@@ -16,8 +16,8 @@
 		V-LIII[[delim r]]V-LVI
   \item entryF1, C-I[[delim r]]C-IV, \bold{D-DII}, D-DI[[delim r]]D-DIV, 
 		V-LIII[[delim r]]V-LVI
-  \item entryP, A-a-1-I-iii[[sfx 3p]], A-a-1-II-iii, A-a-1-III-iii, 
-		A-a-2-I-iii, A-a-3-I-iii
+  \item entryP, A-a-1-VII-iii[[sfx 3p]], A-a-1-VIII-iii, A-a-1-IX-iii, 
+		A-a-2-VII-iii, A-a-3-VII-iii
   \item entryQ, 1-2-3-4-5-6-7-8-9-10[[sfx 2p]], 
 		1-2-3-4-5-6-7-8-9-14[[sfx 3p]], 
 		1-2-3-4-5-6-7-8-9-22[[delim r]]1-2-3-4-5-6-7-8-9-25, 
