@@ -1,3 +1,12 @@
+2021-09-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* fread.c:
+	Modify heuristic detection of page number types.
+	* tests/mendex.test, tests/range.idx, tests/range[123].ind,
+	tests/pprecB.idx, tests/pprec[34].ist, tests/pprecB-[034].ind:
+	Update tests.
+	* version.h: Date [19-Sep-2021]
+
 2021-09-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* fread.c, fwrite.c, sort.c, mendex.h, {,ex}var.h:
